Got rid of the blue background on intermediate standard "build prep list" and made a grey setting. Fixed spacing between "back to list" buttons on Create pages.

--- a/TMNT/Content/maxxam-forms.css
+++ b/TMNT/Content/maxxam-forms.css
@@ -3,7 +3,7 @@
 */
 
 body {
-    overflow-x:hidden;
+    overflow-x: hidden;
 }
 
 /* Summary Table CSS */
@@ -17,9 +17,9 @@ table.summary-table > thead > tr > th {
         width: 25%;
     }
 
-    table.summary-table tr {
-        word-wrap: break-word;
-    }
+table.summary-table tr {
+    word-wrap: break-word;
+}
 
 table#recipe-table > thead > tr > th {
     background: #9bcf7d;
@@ -28,37 +28,37 @@ table#recipe-table > thead > tr > th {
 }
 
 table#recipe-table tr {
-        word-wrap: break-word;
-    }
+    word-wrap: break-word;
+}
 
 /* Inputs CSS */
 input[type=text] {
     width: 100%;
-    border-radius:0;
+    border-radius: 0;
 }
 
 .input-group-addon-sm {
-    width:15%;
+    width: 15%;
 }
 
 .input-group-addon-md {
-    width:22%;
+    width: 22%;
 }
 
 .input-group-addon-lg {
-    width:30%;
+    width: 30%;
 }
 
 .input-group-addon-elg {
-    width:31%;
+    width: 31%;
 }
 
 .input-half-width {
-    width:50% !important;
+    width: 50% !important;
 }
 
 .input-full-width {
-    width:100% !important;
+    width: 100% !important;
 }
 
 .next-section {
@@ -67,7 +67,7 @@ input[type=text] {
 }
 
 .input-no-left-padding {
-    padding-left:0;
+    padding-left: 0;
 }
 
 #Unit {
@@ -129,19 +129,28 @@ input[type=text] {
         padding-right: 15px;
     }
 
-    .zero-left-right-margin {
-        margin-left:0 !important;
-        margin-right:0 !important;
-    }
+.zero-left-right-margin {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+}
 
-    .button-message-error {
-        color:red;
-        font-size:14px;
-        padding-top:5px;
-    }
+.button-message-error {
+    color: red;
+    font-size: 14px;
+    padding-top: 5px;
+}
 
-    .button-message-success {
-        color:green;
-        font-size:14px;
-        padding-top:5px;
-    }
+.button-message-success {
+    color: green;
+    font-size: 14px;
+    padding-top: 5px;
+}
+
+.btn-back-to-list {
+    margin-bottom: 9px;
+}
+
+.alert-grey {
+    border:1px solid #eee;
+    background:#fcfcfc;
+}
